Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35422

mysqld got signal 11 after SELECT DISTINCT

    XMLWordPrintable

Details

    Description

      Attached is the Log after the Query is fired to the Server:

      SELECT DISTINCT t1.`ID` FROM JAX_FORM_RESOURCES t1 WHERE (t1.`ID` LIKE 'resources/SYSTEM/SCHEDULER_JOBS_FORM/V%')
      

      Same Database Downgraded to 10.6.19 everything Works.

      Every Table in DB is per SPIDER Connected to a MariaDB 10.6.20 Database:

      wrapper "mysql", srv "link_1011_local", table "JAX_FORM_RESOURCES"
      

      Everything works directly connected to a MariaDB Server 10.6.20 without SPIDER Engine in between.

      MariaDB with SPIDER Engine Connects to a HAProxy and also directly to another MariaDB 10.6.20 Server and via HAProxy to another MariaDB 10.6.20 Galera Cluster.

      Attachments

        Issue Links

          Activity

            People

              ycp Yuchen Pei
              Ground0 René Linder
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 3h 22m
                  1d 3h 22m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.