MDEV-35422 Fix spider group by handler trying to use fake group by fields